client/css: prevent word-wrapping in source edit textarea

--- a/client/css/post-main-view.styl
+++ b/client/css/post-main-view.styl
@@ -141,6 +141,12 @@
                 margin: 0
                 padding: 0
 
+    .post-source
+        textarea
+            white-space: pre
+            overflow-wrap: normal
+            overflow-x: scroll
+
     form
         width: auto
 
